force-app/main/default/objects/Expo_Date_Controller__c/Expo_Date_Controller__c.object-meta.xml
<CustomObject>
    <description>对各个场景限定周日进行配置</description>
    <label>Expo Date Controller</label>
    <nameField>
        <label>Expo Date Controller Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expo Date Controllers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>