force-app/main/default/objects/Expo_Date_Controller__c/fields/End_Time_Tips__c.field-meta.xml
<CustomField>
    <fullName>End_Time_Tips__c</fullName>
    <label>Hotel Tips End Time</label>
    <type>Time</type>
</CustomField>