force-app/main/default/objects/Expo_Date_Controller__c/fields/Exhibition_Management__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibition Management</label>
    <referenceTo>ExpoInfo__c</referenceTo>
    <relationshipLabel>Expo Date Controllers</relationshipLabel>
    <relationshipName>Expo_Date_Controllers</relationshipName>
    <type>Lookup</type>
</CustomField>