force-app/main/default/objects/Expo_Date_Controller__c/fields/Hotel_Booking_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Booking_End_Date__c</fullName>
    <description>预订酒店结束日期</description>
    <label>Hotel Booking End Date</label>
    <type>Date</type>
</CustomField>