force-app/main/default/objects/Expo_Date_Controller__c/fields/Hotel_Booking_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Booking_Start_Date__c</fullName>
    <description>酒店预定开始时间</description>
    <label>Hotel Booking Start Date</label>
    <type>Date</type>
</CustomField>