force-app/main/default/objects/Expo_Date_Controller__c/fields/Hotel_Select_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Select_Start_Date__c</fullName>
    <description>酒店可选预定开始时间</description>
    <label>Hotel Select Start Date</label>
    <type>Date</type>
</CustomField>