force-app/main/default/objects/Expo_Date_Controller__c/fields/Meeting_Room_Apply_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room_Apply_Start_Date__c</fullName>
    <description>会议室预定开始时间</description>
    <label>Meeting Room Apply Start Date</label>
    <type>Date</type>
</CustomField>