force-app/main/default/objects/Expo_Date_Controller__c/fields/Meeting_Select_End__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Select_End__c</fullName>
    <description>可预定会议室结束日期</description>
    <label>Meeting Room Select End</label>
    <type>Date</type>
</CustomField>