force-app/main/default/objects/Expo_Date_Controller__c/fields/Meeting_Select_Start__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Select_Start__c</fullName>
    <description>会议室预定可选开始时间</description>
    <label>Meeting Room Select Start</label>
    <type>Date</type>
</CustomField>