force-app/main/default/objects/Expo_Date_Controller__c/fields/Pick_Off_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Pick_Off_Start_Date__c</fullName>
    <description>哪一天安排送机</description>
    <label>Pick Off Start Date</label>
    <type>Date</type>
</CustomField>