force-app/main/default/objects/Expo_Date_Controller__c/fields/Pick_Up_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_End_Date__c</fullName>
    <description>安排接机哪一天结束</description>
    <label>Pick Up End Date</label>
    <type>Date</type>
</CustomField>