force-app/main/default/objects/Expo_Date_Controller__c/fields/Pick_Up_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Start_Date__c</fullName>
    <description>哪一天开始接机</description>
    <label>Pick Up Start Date</label>
    <type>Date</type>
</CustomField>