force-app/main/default/objects/Expo_Date_Controller__c/fields/PickOff_Apply_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PickOff_Apply_End_Date__c</fullName>
    <description>送机申请截至日期</description>
    <label>PickOff Apply End Date</label>
    <type>Date</type>
</CustomField>