force-app/main/default/objects/Expo_Date_Controller__c/fields/PickOff_Apply_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PickOff_Apply_Start_Date__c</fullName>
    <description>送机开始报名时间</description>
    <label>PickOff Apply Start Date</label>
    <type>Date</type>
</CustomField>