force-app/main/default/objects/Expo_Date_Controller__c/fields/PickOff_Vehicle_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PickOff_Vehicle_End_Date__c</fullName>
    <label>PickOff Vehicle End Date</label>
    <type>Date</type>
</CustomField>