force-app/main/default/objects/Expo_Date_Controller__c/fields/PickUp_Apply_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PickUp_Apply_Start_Date__c</fullName>
    <description>接机报名开始时间</description>
    <label>PickUp Apply Start Date</label>
    <type>Date</type>
</CustomField>