force-app/main/default/objects/Expo_Date_Controller__c/fields/PickUp_Vehicle_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PickUp_Vehicle_End_Date__c</fullName>
    <label>PickUp Vehicle End Date</label>
    <type>Date</type>
</CustomField>