force-app/main/default/objects/Expo_Date_Controller__c/fields/PickUp_Vehicle_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PickUp_Vehicle_Start_Date__c</fullName>
    <label>PickUp Vehicle Start Date</label>
    <type>Date</type>
</CustomField>