force-app/main/default/objects/Expo_Date_Controller__c/fields/Regular_Bus_Apply_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Regular_Bus_Apply_Start_Date__c</fullName>
    <description>班车预定开始时间</description>
    <label>Regular Bus Apply Start Date</label>
    <type>Date</type>
</CustomField>