force-app/main/default/objects/Expo_Date_Controller__c/fields/Shuttle_Bus_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Shuttle_Bus_Deadline__c</fullName>
    <description>存在的即为不可预定日期，不存在时所有日期均可预定</description>
    <inlineHelpText>存在的即为不可预定日期，不存在时所有日期均可预定</inlineHelpText>
    <label>Shuttle Bus Deadline</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>03-15</fullName>
            </value>
            <value>
                <fullName>03-16</fullName>
            </value>
            <value>
                <fullName>03-17</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>