force-app/main/default/objects/Expo_Date_Controller__c/fields/SignUp_End_Date__c.field-meta.xml
<CustomField>
    <fullName>SignUp_End_Date__c</fullName>
    <description>注册结束日期</description>
    <label>SignUp End Date</label>
    <type>Date</type>
</CustomField>