force-app/main/default/objects/Expo_Date_Controller__c/fields/SignUp_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SignUp_Start_Date__c</fullName>
    <description>注册开始日期</description>
    <label>SignUp Start Date</label>
    <type>Date</type>
</CustomField>