force-app/main/default/objects/Expo_Date_Controller__c/fields/Start_Time_Tips__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_Tips__c</fullName>
    <description>酒店入住时间提示，用于提醒用户该时间段内无法直接入住</description>
    <label>Hotel Tips Start time</label>
    <type>Time</type>
</CustomField>